Treble 10 - Fix alignment of header and support flexbox on older iOS browsers in the Form component

--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -1,6 +1,12 @@
 .container {
+    -webkit-box-direction: normal;
+    -webkit-box-orient: vertical;
     box-sizing: border-box;
     display: flex;
+    display: -webkit-box;
+    display: -webkit-flex;
+
+    -webkit-flex-flow: column nowrap;
     flex-flow: column nowrap;
     font-weight: normal;
     height: calc(100vh - 3rem);
@@ -13,6 +19,8 @@ input {
 }
 
 textarea {
+    -webkit-box-flex: 1;
+    -webkit-flex-grow: 1;
     flex-grow: 1;
 }
 
@@ -27,7 +35,7 @@ textarea {
         padding: 2rem 12.5%;
         width: 100vw;
     }
-    
+
     textarea {
         flex-grow: 0;
         min-height: 12rem;
