--- a/src/pages/accessibility-issues/AccessibilityIssues.css
+++ b/src/pages/accessibility-issues/AccessibilityIssues.css
@@ -1,5 +1,5 @@
 .heading {
     font-size: 1.5rem;
-    justify-content: center;
     padding: 0 0 1.5rem;
+    text-align: center;
 }
